--- a/package.json
+++ b/package.json
@@ -12,8 +12,9 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.0.1",
-    "cookie-parse": "^0.4.0",
+    "cookie-parser": "^1.4.5",
     "express": "^4.17.1",
+    "express-validator": "^6.13.0",
     "jsonwebtoken": "^8.5.1",
     "mariadb": "^2.5.5",
     "morgan": "^1.10.0",
